Improve cache clearing, JVM args, and JNLP process dialogs for 2.3.2
Cache management:
- Add a running-process stop dialog before cache clears, driven by lock-file
  discovery instead of jps
- Introduce backwards-compatible netx_running_details metadata alongside
  the existing netx_running coordination lock
- Correlate PIDs through ps/tasklist, with enhanced per-app lock metadata
- Unify Clear cache, Clear Selected, and Clear All flows with consistent
  success feedback and clearer labels

JVM arguments (Parser):
- Whitelist modern GC and metaspace flags (G1, ZGC, MaxMetaspaceSize, etc.)
- Sanitize unknown java-vm-args individually so one unsupported flag no
  longer discards the entire attribute (including -Xmx)

Security dialog (AccessWarningPane):
- Fix NullPointerException when launching from local JNLP files where
  getSourceLocation() is null

Running-process dialog:
- Show each app's JNLP title and version (e.g. NZSD Maintenance (1.0-SNAPSHOT))
  in Stop/Force Stop rows, stored in lock metadata at launch with JNLP
  and main-jar fallbacks when metadata is missing

Co-authored-by: Cursor <cursoragent@cursor.com>